# go2Motion

./: CMakeLists.txt  README.md  test_sl1m.py
src/: config.py  test_sl1m.py
src/ig/: Untitled.ipynb
